--- a/chats.html
+++ b/chats.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Friends - KakaoTalk Clone</title>
+        <title>Chats - KakaoTalk Clone</title>
     </head>
     <body>
         <div class="status-bar">
@@ -24,57 +24,38 @@
         </div>
 
         <header class="screen-header">
-            <h1 class="screen-header__title">Friends</h1>
+            <h1 class="screen-header__title">Chats</h1>
             <div class="screen-header__icons">
                 <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
+                <span><i class="fa-regular fa-comment-dots fa-lg"></i></span>
                 <span><i class="fa-solid fa-music fa-lg"></i></span>
                 <span><i class="fa-solid fa-gear fa-lg"></i></span>
             </div>
         </header>
 
-        <a id="friends-display-link"><i class="fa-solid fa-circle-info"></i>Friends' Names Display<i class="fa-solid fa-chevron-right fa-xs"></i></a>
-
         <main class="main-screen">
             <div class="user-component">
                 <div class="user-component__column">
                     <img src="screenshots/me.jpeg" 
-                    class="user-component__avatar user-component__avatar--xl"/>
+                    class="user-component__avatar user-component__avatar"/>
                     <div class="user-component__text">
                         <h4 class="user-component__title">Sehyun Ra</h4>
-                        <!--<h6 class="user-component__subtitle">hi this is sehyun</h6>-->
-                    </div>
-                </div>
-                <div class="user-component__column"></div>
-            </div>
-            <div class="friends-screen__channel">
-                <div class="friends-screen__channel-header">
-                    <span>Channel</span>
-                    <i class="fa-solid fa-chevron-up fa-xs"></i>
-                </div>
-            </div>
-            <div class="user-component">
-                <div class="user-component__column">
-                    <img src="screenshots/me.jpeg" 
-                    class="user-component__avatar user-component__avatar--sm"/>
-                    <div class="user-component__text">
-                        <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
+                        <h6 class="user-component__subtitle">Please check my Kakao Account info</h6>
                     </div>
                 </div>
                 <div class="user-component__column">
-                    <div>
-                        <span>2</span>
-                        <i class="fa-solid fa-chevron-right fa-xs"></i>
-                    </div>
+                    <span class="user-component__time">21:22</span>
+                    <div class="badge">1</div>
                 </div>
             </div>
         </main>
 
         <nav class="nav">
             <ul class="nav__list">
-                <li class="nav__btn"><a class="nav__link" href="friends.html"><i class="fa-solid fa-user fa-2x"></i></a></li>
+                <li class="nav__btn"><a class="nav__link" href="friends.html"><i class="fa-regular fa-user fa-2x"></i></a></li>
                 <li class="nav__btn"><a class="nav__link" href="chats.html">
                     <span class="nav__notification badge">1</span>
-                    <i class="fa-regular fa-message fa-2x"></i></a></li>
+                    <i class="fa-solid fa-message fa-2x"></i></a></li>
                 <li class="nav__btn"><a class="nav__link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a></li>
                 <li class="nav__btn"><a class="nav__link" href="more.html">
                     <div class="nav__notifdot"></div>
