--- a/find.html
+++ b/find.html
@@ -32,11 +32,42 @@
         </header>
 
         <main class="main-screen">
-            <div class="find-icons">
-                <div class="find-icons__icon"><i class="fa-solid fa-qrcode fa-2x"></i><span>QR Code</span></div>
-                <div class="find-icons__icon"><i class="fa-regular fa-address-book fa-2x"></i><span>Add by Contacts</span></div>
-                <div class="find-icons__icon"><i class="fa-regular fa-id-badge fa-2x"></i><span>Add by ID</span></div>
-                <div class="find-icons__icon"><i class="fa-regular fa-envelope fa-2x"></i><span>Invite</span></div>
+            <div class="icon-row">
+                <div class="icon-row__icon"><i class="fa-solid fa-qrcode fa-2x"></i><span>QR Code</span></div>
+                <div class="icon-row__icon"><i class="fa-regular fa-address-book fa-2x"></i><span>Add by Contacts</span></div>
+                <div class="icon-row__icon"><i class="fa-regular fa-id-badge fa-2x"></i><span>Add by ID</span></div>
+                <div class="icon-row__icon"><i class="fa-regular fa-envelope fa-2x"></i><span>Invite</span></div>
+            </div>
+            <div class="recommended-friends">
+                <h6 class="recommended-friends__title">Recommended Friends</h6>
+                <span>You have no recommended friends.</span>
+            </div>
+            <div class="open-chat">
+                <div class="open-chat__header">
+                    <h4>Open Chat</h4>
+                    <span>Go to Openchat Home<i class="fa-solid fa-chevron-right fa-xs"></i></span>
+                </div>
+                <div class="open-post">
+                    <div class="open-post__column">
+                        <h5 class="open-post__title">#TBZ</h5>
+                        <h6 class="open-post__hashtags">#tbz #theb #friends</h6>
+                        <div class="open-post__members">
+                            <img src="screenshots/me.jpeg"/>
+                            <span class="open-post__member-count">802 members</span>
+                            <div class="divider"></div>
+                            <span class="open-post__member-status">Active</span>
+                        </div>
+                    </div>
+                    <div class="open-post__column">
+                        <div class="open-post__photo">
+                            <img src="screenshots/me.jpeg"/>
+                            <div class="open-post__heart-count">
+                                <i class="fa-solid fa-heart fa-xs"></i>
+                                <span>326</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </main>
 
