--- a/chats.html
+++ b/chats.html
@@ -29,25 +29,27 @@
                 <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
                 <span><i class="fa-regular fa-comment-dots fa-lg"></i></span>
                 <span><i class="fa-solid fa-music fa-lg"></i></span>
-                <span><i class="fa-solid fa-gear fa-lg"></i></span>
+                <span><i class="fa-solid fa-gear fa-lg"></i></a></span>
             </div>
         </header>
 
         <main class="main-screen">
-            <div class="user-component">
-                <div class="user-component__column">
-                    <img src="screenshots/me.jpeg" 
-                    class="user-component__avatar user-component__avatar"/>
-                    <div class="user-component__text">
-                        <h4 class="user-component__title">Sehyun Ra</h4>
-                        <h6 class="user-component__subtitle">Please check my Kakao Account info</h6>
+            <a href="chat.html">
+                <div class="user-component">
+                    <div class="user-component__column">
+                        <img src="screenshots/me.jpeg" 
+                        class="user-component__avatar user-component__avatar"/>
+                        <div class="user-component__text">
+                            <h4 class="user-component__title">Sehyun Ra</h4>
+                            <h6 class="user-component__subtitle">Please check my Kakao Account info</h6>
+                        </div>
+                    </div>
+                    <div class="user-component__column">
+                        <span class="user-component__time">21:22</span>
+                        <div class="badge">1</div>
                     </div>
                 </div>
-                <div class="user-component__column">
-                    <span class="user-component__time">21:22</span>
-                    <div class="badge">1</div>
-                </div>
-            </div>
+            </a>
         </main>
 
         <nav class="nav">
