--- a/more.html
+++ b/more.html
@@ -28,7 +28,7 @@
             <div class="screen-header__icons">
                 <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
                 <span><i class="fa-solid fa-music fa-lg"></i></span>
-                <span><i class="fa-solid fa-gear fa-lg"></i><div class="gear-notification"></div></span>
+                <span><a href="settings.html"><i class="fa-solid fa-gear fa-lg"></i></a><div class="gear-notification"></div></span>
             </div>
         </header>
 
@@ -58,6 +58,10 @@
                     <div class="more-suggestions__icon">
                         <div class="more-suggestions__icon-image"><i class="fa-solid fa-quote-right fa-2x"></i></div>
                         <div class="more-suggestions__icon-text">Kakao Story</div>
+                    </div>
+                    <div class="more-suggestions__icon">
+                        <div class="more-suggestions__icon-image"><i class="fa-solid fa-gamepad fa-2x"></i></div>
+                        <div class="more-suggestions__icon-text">Kakao Games</div>
                     </div>
                 </div>
             </div>
