--- a/chat.html
+++ b/chat.html
@@ -41,7 +41,7 @@
                 Tuesday, June 30, 2022
             </div>
             <div class="message-row">
-                <img src="#"/>
+                <img src="screenshots/me.jpeg"/>
                 <div class="message-row__content">
                     <span class="message__author">Sehyun Ra</span>
                     <div class="message__bubble">
@@ -50,7 +50,32 @@
                     </div>
                 </div>
             </div>
+            <div class="message-row message-row--own">
+                <div class="message-row__content">
+                    <div class="message__bubble">
+                        <span class="message__content">What's up?</span>
+                        <span class="message__time">21:29</span>
+                    </div>
+                </div>
+            </div>
         </main>
+
+        <form class="reply">
+            <div class="reply__column">
+                <i class="fa-solid fa-square-plus fa-2x"></i>
+            </div>
+            <div class="reply__column">
+                <input type="text" placeholder="Write a message.">
+                <i class="fa-solid fa-face-smile fa-2x"></i>
+                <button>
+                    <i class="fa-solid fa-circle-arrow-up fa-2x"></i>
+                </button>
+            </div>
+        </form>
+
+        <div id="no-mobile">
+            <span>Your screen is too big!</span>
+        </div>
 
         <script src="https://kit.fontawesome.com/78e0ee365f.js" crossorigin="anonymous"></script>
     </body>
