--- a/find.html
+++ b/find.html
@@ -84,6 +84,10 @@
             </ul>
         </nav>
 
+        <div id="no-mobile">
+            <span>Your screen is too big!</span>
+        </div>
+
         <script src="https://kit.fontawesome.com/78e0ee365f.js" crossorigin="anonymous"></script>
     </body>
 </html>
