--- a/friends.html
+++ b/friends.html
@@ -82,6 +82,14 @@
             </ul>
         </nav>
 
+        <div id="splash-screen">
+            <i class="fa-solid fa-message fa-2x"></i></a></li>
+        </div>
+
+        <div id="no-mobile">
+            <span>Your screen is too big!</span>
+        </div>
+
         <script src="https://kit.fontawesome.com/78e0ee365f.js" crossorigin="anonymous"></script>
     </body>
 </html>
