--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             <a href="#">Find Kakao Account or Password</a>
         </form>
 
+        <div id="no-mobile">
+            <span>Your screen is too big!</span>
+        </div>
+
         <script src="https://kit.fontawesome.com/78e0ee365f.js" crossorigin="anonymous">
         </script>
     </body>
